test/fixtures/core/app/modules/syntax-error/index.js
'use strict';


module.exports = function() {
  yield '123';
  this.render();
}
